Created dsa index page

--- a/dsa/index.html
+++ b/dsa/index.html
@@ -13,11 +13,16 @@
 		<div class="container">
 			<h1>Data Structures and Algorithms</h1>
 
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Data Structures and Algorithms</li>
+				</ol>
+			</nav>
+
 			<div class="list-group" id="topic_list">
-				<a href="#" class="list-group-item list-group-item-action"></a>
-				<a href="#" class="list-group-item list-group-item-action"></a>
-				<a href="#" class="list-group-item list-group-item-action"></a>
-				<a href="#" class="list-group-item list-group-item-action"></a>
+				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction and Basic Concepts</a>
+				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 2: Recursion, Abstract Data Types and Priority Queues</a>
 			</div>
 		</div>
 
