--- a/dsa/section1/index.html
+++ b/dsa/section1/index.html
@@ -12,17 +12,19 @@
 
 		<div class="container">
 			<h1>Data Structures and Algorithms</h1>
-
+			<h4>Section 1: Introduction and Basic Concepts</h4>
+			
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Data Structures and Algorithms</li>
+					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Data Structures and Algorithms</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Section 1</li>
 				</ol>
 			</nav>
 
-			<div class="list-group" id="topic_list">
-				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction and Basic Concepts</a>
-				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 2: Recursion, Abstract Data Types and Priority Queues</a>
+			<div class="list-group" id="resources_list">
+				<a href="lecture_notes.html" class="list-group-item list-group-item-action">Lecture Notes</a>
+				<a href="quiz.html" class="list-group-item list-group-item-action">Quiz</a>
 			</div>
 		</div>
 
