--- a/ooad/section2/index.html
+++ b/ooad/section2/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Data Structures and Algorithms</title>
+		<title>OOAD - Section 2: OOAD Analysis Overview and UML Packages</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="../css/dsaIndexStyle.css">
+		<link rel="stylesheet" href="../../css/ooadSection2IndexStyle.css">
 	</head>
 	<body>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -11,18 +11,20 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 		<div class="container">
-			<h1>Data Structures and Algorithms</h1>
-
+			<h1>Object Oriented Analysis and Design</h1>
+			<h4>Section 2: OOAD Analysis Overview and UML Packages</h4>
+			
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Data Structures and Algorithms</li>
+					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Analysis and Design</a></li>
+					<li class="breadcrumb-item active" aria-current="page">Section 2</li>
 				</ol>
 			</nav>
 
-			<div class="list-group" id="topic_list">
-				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction and Basic Concepts</a>
-				<a href="section2/index.html" class="list-group-item list-group-item-action">Section 2: Recursion, Abstract Data Types and Priority Queues</a>
+			<div class="list-group" id="resources_list">
+				<a href="lecture_notes.html" class="list-group-item list-group-item-action">Lecture Notes</a>
+				<a href="quiz.html" class="list-group-item list-group-item-action">Quiz</a>
 			</div>
 		</div>
 
