Added some notes to dsa section 1 lecture notes

--- a/dsa/section1/lecture_notes.html
+++ b/dsa/section1/lecture_notes.html
@@ -27,7 +27,40 @@
 			<div class="row">
 				<div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12">
 					<h4 id="section_one">What is this module about?</h4>
+					<p class="lead">An abstract approach to programming as:</p>
+					<ul>
+						<li>organising information</li>
+						<li>performing computation</li>
+					</ul>
+					<p class="lead">Essential for computing professionals:</p>
+					<ul>
+						<li>knowledge of common data structures and algorithms</li>
+						<li>knowledge of when and how to use them</li>
+						<li>ability to analyse and develop them</li>
+					</ul>
 					<h4 id="section_two">Context</h4>
+					<p class="lead">Builds on concepts from...</p>
+					<ul>
+						<li>
+							Computation and Reasoning
+							<ul>
+								<li>Algorithms</li>
+								<li>Complexity analysis</li>
+							</ul>
+						</li>
+						<li>
+							Systems Architecture
+							<ul>
+								<li>How the operating systems handle programs execution</li>
+							</ul>
+						</li>
+						<li>Programming
+							<ul>
+								<li>Describing Algorithms</li>
+								<li>Executing algorithms</li>
+							</ul>
+						</li>
+					</ul>
 					<h4 id="section_three">Learning Objectives</h4>
 					<h4 id="section_four">How to Reach Learning Goals</h4>
 					<h4 id="section_five">Course Text</h4>
