Updated notes on dsa section 1 lecture notes

--- a/dsa/section1/lecture_notes.html
+++ b/dsa/section1/lecture_notes.html
@@ -62,13 +62,77 @@
 						</li>
 					</ul>
 					<h4 id="section_three">Learning Objectives</h4>
+					<ul>
+						<li>Explain the workings of standard data structures and algorithms</li>
+						<li>Analyse the space and time complexity of algorithms</li>
+						<li>Identify the most imprtant abstract data types and the ways in which they may have been implemented</li>
+						<li>Select appropriate data structures and algorithms for particular practical situations</li>
+						<li>Describe an implementation using plain English or pseudocode</li>
+						<li>Devise appropriate algorithms to address specific problems</li>
+					</ul>
 					<h4 id="section_four">How to Reach Learning Goals</h4>
+					<ul>
+						<li>Work continuosly</li>
+						<li>Attend the lectures (arrive on time!)</li>
+						<li>Go to the tutorials and do the exercises</li>
+						<li>Use interactive examples</li>
+						<li>Program the algorithms yourself</li>
+						<li>Work through all the exercises</li>
+						<li>Read the relevant sections in the textbook</li>
+						<li>Do additional exercises</li>
+					</ul>
 					<h4 id="section_five">Course Text</h4>
+					<p class="lead">Weiss, Mark Allen: Data Structures & Problem Solving using Java (4th editoin). Pearson Addison-Wesley, 2014</p>
+					<p class="lead">...or, alternatively,</p>
+					<p class="lead">Drozdek, Adam: Data Structures and Algorithms in Java (4th edition). Cengage 2013</p>
 					<h4 id="section_six">Organisation</h4>
+					<p class="lead">
+						Module Lecturer: Aravin Naren <br>
+						Email: aravin.naren.1@city.ac.uk <br>
+						Office Hours: A302 (Thursday 15:00 to 16:50) <br>
+						check on-line (via Moodle) for potential changes <br>
+						Lectures: 2 hours/week <br>
+						Thursdays: 9:00 to 10:50 in A130 <br>
+						Tutorial/Lab: 1 hour/week <br>
+						Leaving 120 hours for reading, coursework preparation, etc... <br>
+						Material on Moodle, with discussoin board for mutual help
+					</p>
 					<h4 id="section_seven">Exercises</h4>
+					<p class="lead">
+						Exercise sheets will be available on Moodle every week. The exercises will be the topic of the tutorials. <br>
+						<br>
+						On even weeks will include a programming exercise. <br>
+						<br>
+						Doing the exercise is essential in preparing for the assessments.
+					</p>
 					<h4 id="section_eight">Questions and Discussion</h4>
+					<p class="lead">Discussion forum on Moodle</p>
+					<p class="lead">Asking specific questions</p>
+					<ul>
+						<li>Moodle, tutorials, lectures, TAs surgeries and module leader's office hours</li>
+					</ul>
+					<p class="lead">Note that Moodle will also be used for anouncements</p>
 					<h4 id="section_nine">Assessment</h4>
+					<p class="lead">Formative: </p>
+					<ul>
+						<li>3 Multiple Choice Quizzes in weeks 3, 5 and 7</li>
+					</ul>
+					<p class="lead">Summative: </p>
+					<ul>
+						<li>Oral exam (viva) late in the term based on lectures and tutorials, worth 30% of overall marks</li>
+						<li>Written open books exam in January, worth 70% of overall marks</li>
+					</ul>
 					<h4 id="section_ten">Feedback</h4>
+					<p class="lead">Tutorials</p>
+					<ul>
+						<li>Formative feedback, but you must do the exercises first</li>
+					</ul>
+					<p class="lead">Quizzes</p>
+					<ul><li>Formative feedback online via Moodle</li></ul>
+					<p class="lead">Viva</p>
+					<ul><li>Immediately, face to face</li></ul>
+					<p class="lead">Exam</p>
+					<ul><li>Observatoins on general perfomance via Moodle</li></ul>
 					<h4 id="section_eleven">Week 1: Basic Concepts</h4>
 					<h4 id="section_twelve">Computational Complexity</h4>
 					<h4 id="section_thirteen">Find the Order of Complexity</h4>
