Updated notes on dsa section 1 lecture notes

--- a/dsa/section1/lecture_notes.html
+++ b/dsa/section1/lecture_notes.html
@@ -134,7 +134,88 @@
 					<p class="lead">Exam</p>
 					<ul><li>Observatoins on general perfomance via Moodle</li></ul>
 					<h4 id="section_eleven">Week 1: Basic Concepts</h4>
+					<p class="lead">
+						What are algorithms and data structure? <br>
+						<br>
+						Describing an algorithm <br>
+						Properties of algorithms <br>
+						<br>
+						Data struture: static arrays <br>
+						Algorithm type: search <br>
+					</p>
+					<h5>Algorithms in Computing</h5>
+					<p class="lead">
+						Mathematical description of actions on numbers or symbols. <br>
+					</p>
+					<ul>
+						<li>can be executed by a machine</li>
+						<li>are easily accessible to analysis</li>
+					</ul>
+					<p class="lead">
+						We will look at the abstract properties of algorithms, understanding how they work and using a bit of mathematics to determine ohw they behave.
+					</p>
+					<h5>Describing an Algorithm</h5>
+					<ul>
+						<li>As unstructured text</li>
+						<li>As structured text</li>
+						<li>As a flow chart</li>
+						<li>As pseudocode</li>
+						<li>As Java code (or any programming language)</li>
+					</ul>
+					<p class="lead">In this module we will mainly use pseudocode and Java.</p>
+					<h5>Data Structures</h5>
+					<p class="lead">Data structures are ways of organising data.</p>
+					<p class="lead">They should</p>
+					<ul>
+						<li>represent all relevant information</li>
+						<li>use little memory</li>
+						<li>support efficient algorithms</li>
+					</ul>
+					<h5>A simple data structure: a static array</h5>
+					<ul>
+						<li>Built into most programming languages</li>
+						<li>A finite set of elements</li>
+						<li>The elements are in a fixed sequence</li>
+						<li>Elements can be addressed by indices (Pseudocode, Mathematics, Pascal) or offsets (Java, C, C++)</li>
+					</ul>
+					<h5>Devising programmes to solve problems</h5>
+					<p class="lead">...is a combination of identifying the most suitable</p>
+					<ul>
+						<li>data structure to contain the data</li>
+						<li>algorithm to accomplish the task</li>
+					</ul>
+					<br>
+					<ul>
+						<li>Not all combination of data structures and algorithms work</li>
+						<li>A given combination of data structure and algorithm may be ideal for one situation, yet not the best for another</li>
+					</ul>
+					<h5>Known algorithm examples</h5>
+					<ul>
+						<li>Selection sort</li>
+						<li>Insertion sort</li>
+						<li>Quick sort</li>
+						<li>Merge sort</li>
+						<li>Binary Search</li>
+					</ul>
 					<h4 id="section_twelve">Computational Complexity</h4>
+					<p class="lead">Description of the resources needed by an algorithm:</p>
+					<ul>
+						<li>
+							Complexity in
+							<ul>
+								<li>(running) time or</li>
+								<li>(memory) space</li>
+							</ul>
+						</li>
+						<li>Best, worst and average cases</li>
+						<li>Representation by growth</li>
+					</ul>
+					<h5>Formalism for big-O</h5>
+					<p class="lead">
+						Definition: f(n) is in O(g(n)) if and only if c and N>0 exist such that for all n>N, f(n)<=c*g(n) <br>
+						c is a constant factor, and N is an index of asymptotic behaviour. <br>
+						Example: f(n) = 2n<sup>2</sup> + 3n + 1 is in O(n<sup>2</sup>)
+					</p>
 					<h4 id="section_thirteen">Find the Order of Complexity</h4>
 					<h4 id="section_fourteen">Some Algorithms + Complexity</h4>
 					<h4 id="section_fifteen">Well Known Complexity Classes</h4>
