--- a/dsa/section1/lecture_notes.html
+++ b/dsa/section1/lecture_notes.html
@@ -214,12 +214,89 @@
 					<p class="lead">
 						Definition: f(n) is in O(g(n)) if and only if c and N>0 exist such that for all n>N, f(n)<=c*g(n) <br>
 						c is a constant factor, and N is an index of asymptotic behaviour. <br>
-						Example: f(n) = 2n<sup>2</sup> + 3n + 1 is in O(n<sup>2</sup>)
+						Example: f(n) = 2n<sup>2</sup> + 3n + 1 is in O(n<sup>2</sup>) <br>
+						N=2 and c=4, or N=4 and c=3, etc. <br>
+						Property: if f1(n) and f2(n) are both in O(g(n)), so is f1(n)+f2(n) <br>
+						Proof(sketch): Let C<small>1</small>, C <small>2</small> be the constant factors for f1 and f2, then with C <small>1+2</small> = C <small>1</small> + C <small>2</small> apply big-O definition.
+					</p>
+					<h5>Implications...</h5>
+					<p class="lead">
+						<ul>
+							<li>Big-O is an upper bound, actual values may be less</li>
+							<li>If g(n) <= f(n) then g(n) is in O(f(n))</li>
+							<li>Saying that an algorithm a is in O(g(n)) means that it grows no faster than g(n)</li>
+						</ul>
+					</p>
+					<p class="lead">Note: We often omit the word 'in' and say a is O(g(n))</p>
+					<h5>Properties of big-O</h5>
+					<p class="lead">
+						Rule 1: Scaling by a constant: O(c*f(n)) = O(f(n)) <br>
+						Rule 2: Addition: <br>
+						if f(n) is O(g(n)) (always applies to one part) <br>
+						then O(f(n)) + O(g(n)) = O(g(n)) (greater term dominates) <br>
+						<br>
+						Rule 3: Multiplication: <br>
+						O(f(n)) * O(g(n)) = O(f(n) * g(n)) <br>
+						<br>
+						Rule 4: Logarithms: <br>
+						O(log<small>a</small>n) = O(log<small>b</small>n) (we usually just write O(log n))
+					</p>
+					<h5>Example Calculations</h5>
+					<ul>
+						<li>
+							Orders of sequential algorithm phases are added: <br>
+							e.g. an O(n<sup>2</sup>) phase followed by an O(n log(n)) phase is O(n<sup>2</sup>) + O(n log(n)) = O(n<sup>2</sup>)
+						</li>
+						<li>(n log(n) is O(n<sup>2</sup>), apply Rule 2)</li>
+						<li>3n log(n) + 100n + 50log(n) + 23 is...</li>
+						<li>Orders of nested loops are multiplied: <br>
+						e.g. an outer loop is executed O(n<sup>2</sup>) times and contains an inner loop that is executed O(n) times (its content is O(1)): <br>
+						O(n<sup>2</sup>) * O(n) = O(n<sup>3</sup>)	Rule 3
+						</li>
+						<li>3n log(n) * 2n + 7log(n) is...</li>
+					</ul>
+					<h5>Common Types of complexity</h5>
+					<p class="lead">
+						constant: O(1) <br>
+						logarithmic: O(log n)	good <br>
+						linear: O(n) <br>
+						quadratic: O(n<sup>2</sup>)	acceptable(sometimes) <br>
+						cubic: O(n<sup>3</sup>) <br>
+						polynomial: O(n<sup>k</sup>) <br>
+						exponential: O(a<sup>n</sup>)	intractable <br>
+						factorial: O(n!) <br>
 					</p>
 					<h4 id="section_thirteen">Find the Order of Complexity</h4>
 					<h4 id="section_fourteen">Some Algorithms + Complexity</h4>
+					<p class="lead">
+						Binary search: O(log n) time, O(1) space <br>
+						Linear search: O(n) time, O(1) space <br>
+						Multiplication of n-bit integers: O(n log n log log n) <br>
+						Matrix multiplication for n*n matrices (std): )(n<sup>3</sup>) <br>
+						Travelling salesman: Best known algorithms take O(2<sup>n</sup>) time <br>
+						All permutations of a sequence: O(n!)
+					</p>
 					<h4 id="section_fifteen">Well Known Complexity Classes</h4>
+					<p class="lead">P: computable in polynomial time</p>
+					<ul><li>these problems are considered tractable (although there are limits in practice)</li></ul>
+					<p class="lead">NP: computable in polynomial time on a non-deterministic (inifinitely parallel) machine</p>
+					<ul><li>if we can take a solution and test it in polynomial time, we can find any solution by testing all possible solutions in parallel</li></ul>
+					<p class="lead">EXPTIME: exponential time</p>
+					<ul><li>these problems are known to be really hard</li></ul>
+					<h5>NP-Complete Problems</h5>
+					<p class="lead">Class of combinatorial problems that are equally hard; e.g.:</p>
+					<ul>
+						<li>Travelling Salesman problem: Shortest tour visiting all cities in a set</li>
+						<li>Knapsack: Given a set of itemswith a given value and weight each, find the set with the highest value within a weight limit</li>
+						<li>Satisfiability: Find the assignment of values to make a logical proposition true</li>
+					</ul>
+					<p class="lead">Any NP problem can be reduced to any of these, i.e. if we have a solution to one of them we have one to all NP.</p>
 					<h4 id="section_sixteen">Reading Materials</h4>
+					<p class="lead">For visualisations check Linear and Binary Search on <a href="https://www.cs.usfca.edu/~galles/visualization/Search.html">here</a>
+					</p>
+					<p class="lead">Weiss: Chapter 5</p>
+					<p class="lead">Drozdek: Chapter 2</p>
+					<p class="lead">Next Section: Recursion and Abstract Data Types</p>
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-3 hidden-xs hidden-sm">
 					<div class="list-group">
