Updated cpp lecture 1 notes

--- a/cpp/section1/lecture_notes.html
+++ b/cpp/section1/lecture_notes.html
@@ -64,6 +64,23 @@
 						<strong>2011</strong> C++ 11: many new features (revised in 2014 and 2017) <br>
 					</p>
 					<h4 id="section_four">Philosophy</h4>
+					<h5>Java Design Criteria</h5>
+					<ul>
+						<li>object orientation</li>
+						<li>(moderate) simplicity (fewer variant ways of doing things)</li>
+						<li>robustness and security (type-safe, automatic memory allocation)</li>
+						<li>architecture-neutral (fairly high level)</li>
+						<li>precisely specified, e.g. int is always 32 bits</li>
+						<li>syntax based on C++</li>
+					</ul>
+					<h5>C++ Design Criteria</h5>
+					<ul>
+						<li>support a variety of programming styles, including object oriented (give the programmer more choices)</li>
+						<li>powerful (give the programmer more control)</li>
+						<li>enable efficient implmentation (shift some implementation concerns to the programmer)</li>
+						<li>implementation-dependent specification , e.g. int is machine word size</li>
+						<li>extension of C (machine-level access)</li>
+					</ul>
 					<h4 id="section_five">Basic Program Structure</h4>
 					<h4 id="section_six">Input and Output</h4>
 					<h4 id="section_seven">Strings</h4>
