Fixed home link on c++ lecture 1 notes page

--- a/cpp/section1/lecture_notes.html
+++ b/cpp/section1/lecture_notes.html
@@ -17,7 +17,7 @@
 
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="../../../index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
 					<li class="breadcrumb-item"><a href="../../index.html">Programming in C++</a></li>
 					<li class="breadcrumb-item"><a href="../index.html">Section 1</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Lecture Notes</li>
@@ -81,6 +81,10 @@
 						<li>implementation-dependent specification , e.g. int is machine word size</li>
 						<li>extension of C (machine-level access)</li>
 					</ul>
+					<h5>C++ as as composite language</h5>
+					<p class="lead">
+						C++ is a very large language, with many layers that have accumulated over time
+					</p>
 					<h4 id="section_five">Basic Program Structure</h4>
 					<h4 id="section_six">Input and Output</h4>
 					<h4 id="section_seven">Strings</h4>
