--- a/cpp/section1/lecture_notes.html
+++ b/cpp/section1/lecture_notes.html
@@ -83,10 +83,141 @@
 					</ul>
 					<h5>C++ as as composite language</h5>
 					<p class="lead">
-						C++ is a very large language, with many layers that have accumulated over time
+						C++ is a very large language, with many layers that have accumulated over time. In his book Effective C++, Scott Meyers suggests thinking of C++ as a "federation of related languages" with different programming styles:
 					</p>
+					<ul>
+						<li>C: a low-level language with built-in data types and control structures. OFten C features co exist with newer, cleaner versions.</li>
+						<li>Object-Oriented C++: classes, inheritance, dynamic binding, etc. (But unlike in Java, one can often avoid these.)</li>
+						<li>Template C++: classes and functions can be parameterized by types.</li>
+						<li>The Standard Template Library: a library of containers, iterators and algorithms using template classes, but not inheritance.</li>
+					</ul>
+					<p class="lead">For the first five weeks, we shall focus on the first and last of these, and introduce the second later.</p>
 					<h4 id="section_five">Basic Program Structure</h4>
+					<h5>A Small C++ Program</h5>
+					<code>
+						#include &lt;iostream&gt; <br> <br>
+						int main(){ <br>
+							std::cout << "Hello world!\n"; <br>
+							return 0; <br>
+						}
+					</code>
+					<ul>
+						<li>A typical program will begin with several #include lines, referecing system headers like &lt;iostream&gt;, which contain collections of related definitions (in this case for I/O streams)</li>
+						<li>This #include line brings into scope several names, including std::cout, the standard output stream. Here std is the standard namespace, which is attached to all names defined in the standard libraries, e.g. std::string, std::vector, etc</li>
+					</ul>
+					<h5>Using the standard namespace</h5>
+					<p class="lead">We can avoid putting std:: in front of every standard name by placing a single using declaration at the top, after the #include lines:</p>
+					<code>
+						#include &lt;iostream&gt; <br>
+						<br>
+						using namespace std; <br>
+						<br>
+						int main(){ <br>
+							cout << "Hello world! \n"; <br>
+							return 0; <br>
+						}	
+					</code>
+					<p class="lead">(Some style guides prefer to put std:: everywhere)</p>
+					<p class="lead">We won't be using any namespaces other than std.</p>
+					<h5>Functions</h5>
+					<p class="lead">In C++ (as in C), one can define functions independent of any class:</p>
+					<code>
+						int square(int n){ <br>
+							return n*n; <br>
+						}
+					</code>
+					<p class="lead">A function called min is used as the entry point of the program:</p>
+					<code>
+						int main(){ <br>
+							// whatever you like here <br>
+							return 0; <br>
+						}
+					</code>
+					<p class="lead">The return value is reported to the system when the program exits: 0 means success; anything else means something went wrong.</p>
+					<h5>Similarities with Java</h5>
+					<p class="lead">Many things in the C part of C++ are much the same as in Java:</p>
+					<ul>
+						<li>primitive types int, doubles, etc</li>
+						<li>declarations, expressions, comments</li>
+						<li>semicolons to end statements and braces for grouping</li>
+						<li>if, for, while, return</li>
+					</ul>
+					<p class="lead">For example, this means the same in both languages:</p>
+					<code>
+						int factorial(int n){ <br>
+							int prod = 1; <br>
+							for (int i = 1; i <= n; ++i) <br>
+							&emsp;&emsp;prod = prod * i; <br>
+							return prod; <br>
+						}
+					</code>
+					<p class="lead">(but in Java this must be a method inside a class)</p>
 					<h4 id="section_six">Input and Output</h4>
+					<h5>Text Output</h5>
+					<p class="lead">This statement writes a string to the standard output (the console):</p>
+					<code>
+						cout << "Hello world!\n";
+					</code>
+					<p class="lead">(like System.out.println("Hello world"); in Java)</p>
+					<ul>
+						<li>The &lt;iostream&gt; header defines three standard streams:
+						<br>
+						std::cin standard input (cf. Java's System.in) <br>
+						std::cout standard output (cf. Java's System.out) <br>
+						std:cerr error output (cf. Java's System.err)
+						</li>
+						<li>The << operator, when applied to an output stream and a string, writes the string to the stream.</li>
+						<li>When applied to integers, it performs a left shift (as in Java): the << operator is overloaded.</li>
+					</ul>
+					<h5>Outputting several things</h5>
+					<code>
+						#include &lt;iostream&gt; <br>
+						<br>
+						using namespace std; <br>
+						<br>
+						int main() { <br>
+						&emsp;int i = 3; <br>
+						&emsp;cout << "The value is " << i << '\n'; <br>
+						&emsp; return 0; <br>
+						}
+					</code>
+					<p class="lead">The << operator to the left, and returns the stream, so the above line is equivalent to </p>
+					<code>
+						((cout << "The value is ") << i) << '\n';
+					</code>
+					<p class="lead">It is also overloaded for int and char.</p>
+					<h5>Ending output lines with endl</h5>
+					<p class="lead">Some authors use endl instead of '\n':</p>
+					<code>
+						#include &lt;iostream&gt; <br>
+						<br>
+						using namespace std; <br>
+						<br>
+						int main() { <br>
+						&emsp;cout << "Hello world!" << endl; <br>
+						&emsp;return 0; <br>
+						}
+					</code>
+					<p class="lead">but this is slightly different. The endl manipulator output '\n' and then flushes the output, so the output line is equivalent to</p>
+					<code>
+						cout << "Hello world!" << '\n' << flush;
+					</code>
+					<p class="lead">But frequent flushing may be costly.</p>
+					<h5>Text Input</h5>
+					<code>
+						#include &lt;iostream&gt; <br>
+						<br>
+						using namespace std; <br>
+						<br>
+						int main(){ <br>
+						&emsp;int i; <br>
+						&emsp;cout << "Type a number: "; <br>
+						&emsp;cin >> i; <br>
+						&emsp;cout << i << " times 3 is " << (i*3) << '\n'; <br>
+						&emsp;return 0; <br>
+						}
+					</code>
+					<p class="lead">The >> operator reads from an input stream. It is overloaded in a similar way to the << operator.</p>
 					<h4 id="section_seven">Strings</h4>
 					<h4 id="section_eight">Exercises</h4>
 				</div>
