Fixed links and updated c++ index page

--- a/ooad/section1/lecture_notes.html
+++ b/ooad/section1/lecture_notes.html
@@ -17,9 +17,9 @@
 
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a href="../../../index.html">Home</a></li>
-					<li class="breadcrumb-item"><a href="../../index.html">Object Oriented Anaylsis and Design</a></li>
-					<li class="breadcrumb-item"><a href="../index.html">Section 1</a></li>
+					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Object Oriented Anaylsis and Design</a></li>
+					<li class="breadcrumb-item"><a href="index.html">Section 1</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Lecture Notes</li>
 				</ol>
 			</nav>
