--- a/cpp/index.html
+++ b/cpp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Data Structures and Algorithms</title>
+		<title>Programming in C++</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="../css/dsaIndexStyle.css">
 	</head>
@@ -11,18 +11,18 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 		<div class="container">
-			<h1>Data Structures and Algorithms</h1>
+			<h1>Programming in C++</h1>
 
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-					<li class="breadcrumb-item active" aria-current="page">Data Structures and Algorithms</li>
+					<li class="breadcrumb-item active" aria-current="page">Programming in C++</li>
 				</ol>
 			</nav>
 
 			<div class="list-group" id="topic_list">
-				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction and Basic Concepts</a>
-				<a href="section2/index.html" class="list-group-item list-group-item-action">Section 2: Recursion, Abstract Data Types and Priority Queues</a>
+				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction to C++</a>
+				<a href="section2/index.html" class="list-group-item list-group-item-action">Section 2: Sequential Containers</a>
 			</div>
 		</div>
 
