--- a/cpp/section1/lecture_notes.html
+++ b/cpp/section1/lecture_notes.html
@@ -18,8 +18,8 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-					<li class="breadcrumb-item"><a href="../../index.html">Programming in C++</a></li>
-					<li class="breadcrumb-item"><a href="../index.html">Section 1</a></li>
+					<li class="breadcrumb-item"><a href="../index.html">Programming in C++</a></li>
+					<li class="breadcrumb-item"><a href="index.html">Section 1</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Lecture Notes</li>
 				</ol>
 			</nav>
