Update dsa 3 lecture notes

--- a/dsa/index.html
+++ b/dsa/index.html
@@ -23,6 +23,7 @@
 			<div class="list-group" id="topic_list">
 				<a href="section1/index.html" class="list-group-item list-group-item-action">Section 1: Introduction and Basic Concepts</a>
 				<a href="section2/index.html" class="list-group-item list-group-item-action">Section 2: Recursion, Abstract Data Types and Priority Queues</a>
+				<a href="section3/index.html" class="list-group-item list-group-item-action">Section 3: Trees, Heaps and Queues</a>
 			</div>
 		</div>
 
